<resources>
    <string name="disable_alarm_key">disable_alarm_key</string>
    <string name="enable_logs_key">enable_log_calls</string>
    <string name="disable_hardkeys_key">disable_hard_keys</string>
    <string name="auto_current_location_key">auto_current_location_key</string>
    <string name="allowed_list_key">allowed_list_key</string>
    <string name="allowed_contacts_key">allowed_contacts_key</string>
    <string name="location_time_category_key">location_time_category_key</string>
    <string name="feature_category_key">feature_category_key</string>
    <string name="allowed_contacts_category_key">allowed_contacts_category_key</string>
    <string name="disable_led_indicator_key">disable_led_indicator_key</string>
    <string name="set_flight_mode_switch_key">set_flight_mode_switch_key</string>
    <string name="connectivity_category_key">flight_mode_category_key</string>
    <string name="five_minute_alert_key">five_minute_alert_key</string>
    <string name="power_saver_key">power_saver_key</string>
    <string name="manual_location_key">manual_location_key</string>
    <string name="manual_location_checkbox_key">manual_location_checkbox_key</string>
    <string name="today">Today</string>
    <string name="change_clendar">Jewish/Gregorian</string>
    <string name="app_name">Jewish Calendar</string>
    <string name="add_event_title">Add event</string>
    <string name="goTo_s">Go to</string>
    <string name="date_time_set">Set date</string>
    <string name="cancel">Cancel</string>
    <string name="create_event">Create event</string>
    <string name="show_day_events">Show events</string>
    <string name="low_jewish_boundary">Low boundary of Jewish Calendar is Tishrei 5661</string>
    <string name="high_jewish_boundary">High boundary of Jewish Calendar is Elul 5860</string>
    <string name="low_gregorian_boundary">Low boundary of Gregorian Calendar is January 1900</string>
    <string name="high_gregorian_boundary">High boundary of Gregorian Calendar is December 2100</string>
    <string name="no_events_on_day">No events on this day</string>
    <string name="choose_action_from_list">Choose action from list</string>
    <string name="ok">OK</string>
    <string name="save">OK</string>
    <string name="cancellation">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="from_must_be_earlier_than_to">From must be earlier than To</string>
    <string name="overlapping_events">Note: The time range of this event overlaps time range of another event</string>
    <string name="save_event_anyway">Save changes</string>
    <string name="dont_save_event_changes">Do not save changes</string>
    <string name="create_event_anyway">Create event anyway</string>
    <string name="dont_create_event">Do not create event</string>
    <string name="no_subject">(No subject)</string>
    <string name="from_date">From:</string>
    <string name="to_date">To:</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="add_event">Create new event</string>
    <string name="remove_all_events">Remove all events</string>
    <string name="interested_in_removing_all_events">Note: All events occurring during this day will be removed</string>
    <string name="repeat_recurrence_title">Repeat</string>
    <string name="no_repeat">None</string>
    <string name="daily_repeat">Daily</string>
    <string name="weekly_repeat">Weekly</string>
    <string name="gregorian_monthly_repeat">Gregorian monthly</string>
    <string name="jewish_monthly_repeat">Jewish monthly</string>
    <string name="gregorian_yearly_repeat">Gregorian yearly</string>
    <string name="jewish_yearly_repeat">Jewish yearly</string>
    <string name="event_reminder">Jewish Calendar: Event reminder</string>
    <string name="reminder_title">Alarm</string>
    <string name="no_reminder">None</string>
    <string name="reminder_on_time">On time</string>
    <string name="reminder_5_min_before">5 min before</string>
    <string name="reminder_15_min_before">15 min before</string>
    <string name="reminder_1_hour_before">1 hour before</string>
    <string name="reminder_1_day_before">1 day before</string>
    <string name="reminder_1_week_before">1 week before</string>
    <string name="event_reminders_title">Reminders</string>
    <string name="zmanim">Times</string>
    <string name="zmanim_progress">"Loading location and times.

Ensure that either GPS or wireless networks are enabled."</string>
    <string name="location_unknown">Address unknown</string>
    <string name="location_coords">Lat. %1$s, Lng. %2$s</string>
    <string name="time_dawn_16deg">Dawn</string>
    <string name="time_dawn_72min">Dawn</string>
    <string name="time_earliest">Earliest tallis and tefillin</string>
    <string name="time_sunrise"><font fgcolor="#FF000000">Sunrise</font></string>
    <string name="time_shema_mga">Latest shema</string>
    <string name="time_shema_gra">Latest shema</string>
    <string name="time_prayers_mga">Latest morning prayers</string>
    <string name="time_prayers_gra">Latest morning prayers</string>
    <string name="time_midday"><font fgcolor="#FF000000">Midday</font></string>
    <string name="time_earliest_mincha">Earliest afternoon prayers</string>
    <string name="time_mincha">Afternoon prayers</string>
    <string name="time_plug_hamincha">Plug hamincha</string>
    <string name="time_candles"><font fgcolor="#FF000000">Candle lighting</font></string>
    <string name="time_sunset"><font fgcolor="#FF000000">Sunset</font></string>
    <string name="time_nightfall_3stars">Nightfall</string>
    <string name="time_nightfall_72min">Nightfall</string>
    <string name="time_midnight">Midnight</string>
    <string name="time_desc_dawn_16deg">16.1° below the eastern horizon</string>
    <string name="time_desc_dawn_72min">72 minutes before sea level sunrise</string>
    <string name="time_desc_earliest">Sun is 11.5° below horizon</string>
    <string name="time_desc_sunrise">In a level region</string>
    <string name="time_desc_shema_mga">Latest shema according to Magen Avraham</string>
    <string name="time_desc_shema_gra">Latest shema according to Gra &amp; Baal Tanya</string>
    <string name="time_desc_prayers_mga">Latest shacharis according to Magen Avraham</string>
    <string name="time_desc_prayers_gra">Latest shacharis according to Gra &amp; Baal Tanya</string>
    <string name="time_desc_midday">Noon</string>
    <string name="time_desc_earliest_mincha">Earliest mincha (mincha gedola)</string>
    <string name="time_desc_mincha">Mincha ketana</string>
    <string name="time_desc_plug_hamincha">Plug hamincha according to Gra &amp; Baal Tanya</string>
    <string name="time_desc_candles">18 minutes before sunset</string>
    <string name="time_desc_sunset">In a level region</string>
    <string name="time_desc_nightfall_3stars">3 stars visible</string>
    <string name="time_desc_nightfall_72min">72 minutes</string>
    <string name="time_desc_midnight">Midnight (chatzos)</string>
    <string name="app_name2">Shomer Shabbat</string>
    <string name="interested_in_exiting_shabbat_mode">Are you sure you want to exit Shabbat Mode?</string>
    <string name="want_to_exit_shabbat_mode">Do you want to exit Shabbat Mode?</string>
    <string name="received_text_from_contact">You have received a text message from an allowed contact.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disable_led_indicator_title">Turn off LED indicator</string>
    <string name="allowed_contacts_title">Allowed contacts</string>
    <string name="allowed_list">Allowed contact list</string>
    <string name="allowed_contacts_category_title">Allowed contacts</string>
    <string name="features_category_title">Features</string>
    <string name="select_all">Select All</string>
    <string name="shabbat_mode_add">Add</string>
    <string name="delete">Delete</string>
    <string name="noContacts">No contacts</string>
    <string name="shabbat_mode_title">When this mode is turned on, all communications and transmitions will be disabled or restricted during the Shabbat.</string>
    <string name="shabbat_mode_light_title">When this mode is turned on, communications and transmitions will be restricted during the Shabbat</string>
    <string name="shabbat_mode_help">Click for more information</string>
    <string name="disable_hardkey_title">Prevent use in Shabbat</string>
    <string name="disable_hardkey_summary">"Device will be forced back to sleep if mistakenly woken up by pressing the power button.
In case of an emergency wake the device up 3 times."</string>
    <string name="disable_alarm_title">Turn off alarm and timer</string>
    <string name="enable_logs_title">Keep phone in silent mode</string>
    <string name="enable_logs_summary">"Airplane mode will block all transmissions to your device.
Keep in Silent mode will keep the device silent while incoming calls and SMS will be received and recorded on device logs. It will ring only for incoming calls from people on your allowed list."</string>
    <string name="auto_current_location_title">Automatically update location</string>
    <string name="auto_current_location_summary">The application will automatically search and update your current location and the Shabbat times.</string>
    <string name="location_category_title">Location and Times</string>
    <string name="content_descriptor_image">content_descriptor_image</string>
    <string name="press_btn_to_locate">Press the button to find your current location</string>
    <string name="set_flight_mode_title">Airplane mode on</string>
    <string name="none">None</string>
    <string name="all_contacts">All contact</string>
    <string name="fav_contacts">All favourite</string>
    <string name="custom">Custom</string>
    <string name="no_location_services_msg">In order to determine the Shabbat accurate times according to your exact location, please turn on location services.</string>
    <string name="no_loocation_services_title">Location services disabled</string>
    <string name="settings">Settings</string>
    <string name="ignore">Ignore</string>
    <string name="connectivity_mode_title">Device connectivity mode</string>
    <string name="shabbat_mode_entrance_title">Shomer Shabbat will start on the next Shabbat entrance time</string>
    <string name="shabbat_mode_notif_text">"Start on "</string>
    <string name="shabbat_mode_notif_text_end">"End on "</string>
    <string name="shabbat_mode_notif_title">Shomer Shabbat enabled</string>
    <string name="image_ui">image_ui</string>
    <string name="shabbat_mode_exit_title">Motzai Shabbat is on</string>
    <string name="loading_list">Loading list</string>
    <string name="debugging">Debug</string>
    <string name="stay_shabbat">Keeping Shomer Shabbat. Device will lock in a few seconds</string>
    <string name="shabbat_will_enter">Your device will enter Shomer Shabbat in</string>
    <string name="minutes">minutes</string>
    <string name="minute">a minute</string>
    <string name="alert_fime_minutes_title">Alert me 5 minutes before Shabbat</string>
    <string name="shabbat_mode_cacneled">Shomer Shabbat is canceled</string>
    <string name="shabbat_mode_is_on">Shomer Shabbat is on</string>
    <string name="lock_screen_text">In case of an emergency, wake the device up 3 times.</string>
    <string name="five_min_alert_summary">Shabbat entrance is candle lighting time, 18 minutes before sunset.</string>
    <string name="help_title">Shomer Shabbat - Help</string>
    <string name="manual_location_input">Set location manually</string>
</resources>