<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="preferenceScreen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:enabled="false" android:layout="@layout/shabbat_mode_light_title" android:key="shabbat_mode_title" android:shouldDisableView="true" />
    <PreferenceCategory android:enabled="false" android:title="@string/location_category_title" android:key="@string/location_time_category_key">
        <CheckBoxPreference android:layout="@layout/cutom_preference_layout" android:title="@string/auto_current_location_title" android:key="@string/auto_current_location_key" android:summary="@string/auto_current_location_summary" android:defaultValue="true" />
        <CheckBoxPreference android:layout="@layout/cutom_preference_layout" android:title="@string/manual_location_input" android:key="@string/manual_location_checkbox_key" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:enabled="false" android:title="@string/features_category_title" android:key="@string/feature_category_key">
        <CheckBoxPreference android:layout="@layout/cutom_preference_layout" android:title="@string/alert_fime_minutes_title" android:key="@string/five_minute_alert_key" android:summary="@string/five_min_alert_summary" />
        <CheckBoxPreference android:layout="@layout/cutom_preference_layout" android:title="@string/disable_hardkey_title" android:key="@string/disable_hardkeys_key" android:summary="@string/disable_hardkey_summary" />
        <CheckBoxPreference android:layout="@layout/cutom_preference_layout" android:title="@string/disable_alarm_title" android:key="@string/disable_alarm_key" android:defaultValue="true" />
        <CheckBoxPreference android:layout="@layout/cutom_preference_layout" android:title="@string/disable_led_indicator_title" android:key="@string/disable_led_indicator_key" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:enabled="false" android:title="@string/allowed_contacts_category_title" android:key="@string/allowed_contacts_category_key">
        <ListPreference android:entries="@array/allow_list_entries" android:layout="@layout/cutom_preference_layout" android:title="@string/allowed_contacts_title" android:key="@string/allowed_contacts_key" android:summary="%s" android:widgetLayout="@layout/round_more_icon" android:defaultValue="@string/none" android:entryValues="@array/allow_list_value" />
        <Preference android:enabled="false" android:layout="@layout/cutom_preference_layout" android:title="@string/allowed_list" android:key="@string/allowed_list_key" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_title">
        <Preference android:layout="@layout/shabbatmode_help" android:key="shabbat_mode_help" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Debugging Light Mode" android:key="shabbat_debug_category">
        <Preference android:layout="@layout/debug_layout_light" android:key="shabbat_debug" />
    </PreferenceCategory>
</PreferenceScreen>