<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/FrameLayout1" android:background="@color/black" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center" android:id="@id/imageView1" android:padding="@dimen/lock_screen_image_margin_top_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/screensaver_background" android:scaleType="fitCenter" android:contentDescription="@string/image_ui" />
    <TextView android:textSize="@dimen/lock_screen_title_size" android:textStyle="bold|italic" android:textColor="@color/white" android:gravity="center" android:layout_gravity="top" android:id="@id/txtAlert" android:paddingTop="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lock_screen_margin_top_bottom" android:text="@string/shabbat_mode_is_on" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" />
    <TextView android:textSize="@dimen/lock_screen_txt_size" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:layout_gravity="bottom" android:id="@id/textViewPreventUse" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/lock_screen_margin_top_bottom" android:text="@string/lock_screen_text" android:paddingStart="20.0dip" android:paddingEnd="20.0dip" />
</FrameLayout>