<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?android:listDivider" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@drawable/tw_sub_header_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/button_sellect_all" android:background="?android:selectableItemBackground" android:padding="@dimen/radio_group_line_padding" android:layout_width="fill_parent" android:layout_height="@dimen/list_bar_height">
            <CheckBox android:layout_gravity="end|center" android:id="@id/toggle_list_check" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="center_vertical" android:id="@id/TextView1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/select_all" android:layout_centerVertical="true" android:paddingStart="@dimen/radio_group_line_padding" android:paddingEnd="@dimen/radio_group_line_padding" android:layout_toEndOf="@id/toggle_list_check" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </FrameLayout>
    <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@android:id/list" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0px" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent" android:layout_weight="0.74" />
    <RelativeLayout android:gravity="center" android:id="@android:id/empty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:gravity="center" android:id="@id/noitem_image_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/noitems_text_based" android:contentDescription="@string/image_ui" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/noContacts" android:layout_below="@id/noitem_image_view" />
    </RelativeLayout>
</LinearLayout>