<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?android:listDivider" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@drawable/tw_sub_header_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/txtTapToAdd" android:background="?android:selectableItemBackground" android:padding="@dimen/radio_group_line_padding" android:layout_width="fill_parent" android:layout_height="@dimen/list_bar_height">
            <ImageView android:layout_gravity="end|center" android:id="@id/add_image" android:background="@drawable/list_icon_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:contentDescription="@string/image_ui" android:layout_marginStart="@dimen/radio_group_line_padding" android:layout_marginEnd="@dimen/radio_group_line_padding" android:layout_alignParentEnd="true" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:gravity="center_vertical" android:id="@id/TextView1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/shabbat_mode_add" android:layout_centerVertical="true" android:layout_marginStart="@dimen/radio_group_line_padding" android:layout_marginEnd="@dimen/radio_group_line_padding" android:layout_toStartOf="@id/add_image" android:layout_alignParentStart="true" />
        </RelativeLayout>
    </FrameLayout>
    <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@android:id/list" android:paddingTop="0.0dip" android:paddingBottom="10.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0px" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent" android:layout_weight="0.74" />
    <RelativeLayout android:gravity="center" android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:gravity="center" android:id="@id/noitem_image_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/noitems_text_based" android:contentDescription="@string/image_ui" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/noContacts" android:layout_below="@id/noitem_image_view" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>